@@ -71,6 +71,30 @@ Boots the <quote>bf2.4</quote> flavor.
 
   </sect2>
 
+  <sect2 arch="x86" id="boot-win32">
+  <title>Booting from Windows</title>
+<para>
+
+To start the installer from Windows, you must first obtain CD-ROM/DVD-ROM
+or USB memory stick installation media as described in
+<xref linkend="official-cdrom"/> and <xref linkend="boot-usb-files"/>.
+
+</para><para>
+
+If you use an installation CD or DVD, a pre-installation program should be
+launched automatically when you insert the disc.
+In case Windows does not start it automatically, or if you are using a USB
+memory stick, you can run it manually by accessing the device and executing
+<command>setup.exe</command>.
+
+</para><para>
+
+After the program has been started, a few preliminary questions will be
+asked and the system will be prepared to start the &debian; installer.
+
+</para>
+  </sect2>
+
 <!-- FIXME the documented procedure does not exactly work, commented out
      until fixes
 
@@ -190,27 +214,6 @@ From here on, there should be no difference between <command>GRUB</command>
 or <command>LILO</command>.
 
 </para>
-  </sect2>
-
-  <sect2 arch="x86" id="boot-win32">
-  <title>Booting from Windows</title>
-
-<para>
-To start the installer from Windows, you must first obtain CD-ROM/DVD-ROM or USB
-Memory Stick installation media as described in <xref linkend="official-cdrom"/>
-and <xref linkend="boot-usb-files"/>.
-</para>
-
-<para>
-If the medium is a CD-ROM or DVD-ROM, when you insert it and a pre-installation program
-should be launched automatically.  In case Windows doesn't start it, or you are using
-a USB Memory Stick medium, you can run it manually by accessing the device and
-executing <command>setup.exe</command>.
-
-When the program is started, it will ask a few preliminary questions and prepare the
-system to start the installer.
-</para>
-
   </sect2>
 
   <sect2 arch="x86" condition="bootable-usb" id="usb-boot">
