@@ -10,6 +10,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Note that an empty preseed file is equivalent to a normal manual
     installation (thanks, Nathan Sutton).
 
+  [ Robert Millan ]
+  * Document how to start the installer from Windows.
+
  -- Frans Pop <fjp@debian.org>  Tue, 19 Feb 2008 15:22:07 +0100
 
 installation-guide (20080211) unstable; urgency=low
